--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <h1>Hello World!</h1>
         <p>This is the first file in the new Git Repo</p>
         <p>This is a new line</p>
+        <p>This is another new line</p>
     </body>
 </html>
