--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
         <h1>Hello World!</h1>
         <p>This is the first file in the new Git Repo</p>
         <p>This is a new line</p>
+        <div>
+            <img src="2.jpg" alt="Everything will be OK" style="width: 100%; max-width:960px" />
+        </div>
     </body>
 </html>
